force-app/main/default/objects/Material_Change_Applicant__c/Material_Change_Applicant__c.object-meta.xml
<CustomObject>
    <label>Material Change Applicant</label>
    <nameField>
        <displayFormat>MCA-{00000}</displayFormat>
        <label>Material Change Applicant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Change Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>