force-app/main/default/objects/Material_Change_Applicant__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Applicant</description>
    <label>Applicant</label>
    <referenceTo>LoanApplicant</referenceTo>
    <relationshipLabel>Material Change Applicants</relationshipLabel>
    <relationshipName>Material_Change_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>