force-app/main/default/objects/Material_Change_Applicant__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Link to loan app</description>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Material_Change__r.Loan_Application__c ,   Material_Change__r.Loan_Application__r.Name, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Application</label>
    <type>Text</type>
</CustomField>