force-app/main/default/objects/Material_Change_Applicant__c/fields/Material_Change__c.field-meta.xml
<CustomField>
    <fullName>Material_Change__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Associated material change</description>
    <label>Material Change</label>
    <referenceTo>Material_Change__c</referenceTo>
    <relationshipLabel>Material Change Applicants</relationshipLabel>
    <relationshipName>Material_Change_Applicants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>